=== HEAD

* When emulating offset with ROW_NUMBER, default to ordering by all columns if no specific order is given (stnoonan, jeremyevans) (#490)

* Work around JRuby 1.6 ruby 1.9 mode bug in Time -> SQLTime conversion (jeremyevans)

=== 3.36.1 (2012-06-01)

* Fix jdbc adapter when DriverManager#getConnection fails (aportnov) (#488)

=== 3.36.0 (2012-06-01)

* Use Bignum generic type when dumping unsigned integer types that could potentially overflow 32-bit signed integer values (stu314)

* Support :transform option in the nested_attributes plugin, for automatically preprocessing input hashes (chanks)

* Support :unmatched_pk option in the nested_attributes plugin, can be set to :create for associated objects with natural keys (chanks)

* Support composite primary keys in the nested_attributes plugin (chanks)

* Allow Model#from_json in the json_serializer plugin to use set_fields if a :fields option is given (jeremyevans)

* Support :using option to set_column_type on PostgreSQL, to force a specific conversion from the old value to the new value (jeremyevans)

* Drop indexes in the reverse order that they were added in the schema dumper (jeremyevans)

* Add :index_names option to schema dumper method, can be set to false or :namespace (stu314, jeremyevans)

* Add Database#global_index_namespace? for checking if index namespace is global or per table (jeremyevans)

* Fix typecasting of time columns on jdbc/postgres, before could be off by a millisecond (jeremyevans)

* Add document explaining Sequel's object model (jeremyevans)

* Attempt to detect more disconnect errors in the mysql2 adapter (jeremyevans)

* Add is_current? and check_current to the migrators, for checking/raising if there are unapplied migrations (pvh, jeremyevans) (#487)

* Add a jdbc subadapter for the Progress database (Michael Gliwinski, jeremyevans)

* Add pg_inet extension, for working with PostgreSQL inet and cidr types (jeremyevans)
